self_repl: Improve mathjax compat'y with IE.
This commit is based on the advice here:
http://docs.mathjax.org/en/latest/misc/faq.html#what-should-ie-s-x-ua-compatible-meta-tag-be-set-to

--- a/self_repl_fns/template.html
+++ b/self_repl_fns/template.html
@@ -6,6 +6,7 @@
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
     <link rel="stylesheet" href="tufte-edited.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
   <body>
     <div class="main">
