self_repl: start bit on esr bijection after thm 3.

--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -250,6 +250,13 @@
       <p align="right">
       <span class="math inline">\(\Box\)</span>
       </p>
+      <p>TODO add Cantor dust mention</p>
+      <p>Call the function <span class="math inline">\(h\)</span> <em>tail-consistent</em> on a domain set <span class="math inline">\(A\)</span> if <span class="math inline">\({\text{tail}}(x) = {\text{tail}}(y) \;\Rightarrow\; h(x) = h(y)\)</span> for any <span class="math inline">\(x,y \in A.\)</span> There’s a bijection between the exactly self-replicating functions characterized by theorem 3 and an arbitrary choice of the following three functions:</p>
+      <p><span class="math display">\[\begin{array}{ll}
+      r_L : [0,1] \to {\mathbb{R}}, \\
+      r_R : [0,1] \to {\mathbb{R}}, &amp; \text{and} \\
+      h   : (1,2) - G \to {\mathbb{R}}&amp; \text{which is tail-consistent.}
+      \end{array}\]</span></p>
       <hr />
       <p>We can see this by working with three functions: <span class="math inline">\(r_L : [0,1] \to {\mathbb{R}}\)</span>, <span class="math inline">\(r_R : [0,1] \to {\mathbb{R}}\)</span>, and <span class="math inline">\(h : (1,2) - G \to {\mathbb{R}}\)</span>; with the restriction that <span class="math inline">\({\text{tail}}(x) = {\text{tail}}(y) \Rightarrow h(x) = h(y)\)</span>. Theorem 1 allows us to build a function <span class="math inline">\(f:[0,3]\to{\mathbb{R}}\)</span> based on <span class="math inline">\(r_L,\)</span> <span class="math inline">\(r_R,\)</span> and <span class="math inline">\(h.\)</span></p>
       <p>TODO HERE Continue this reasoning in the other direction and summarize the aforementioned results (whatever are appropriate in a single theorem statement) as a theorem.</p>
