self_repl: add mention of the Cantor set.

--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -197,6 +197,7 @@
       <p><span class="math display">\[\mu(G) = \sum_{k \ge 0}\mu(G_k) = \sum_{k\ge 0}
       \frac{1}{3}\left(\frac{2}{3}\right)^k = 1.\]</span></p>
       <p>Since each <span class="math inline">\(G_k\subset [1,2]\)</span>, this justifies the claim that theorem 1 characterizes <span class="math inline">\(f\)</span> almost everywhere in that interval.</p>
+      <p>Readers familiar with the <a href="https://en.wikipedia.org/wiki/Cantor_set"><em>Cantor set</em></a> <span class="math inline">\({\mathcal{C}}\)</span> may notice that it’s closely related to the set <span class="math inline">\(G\)</span>. In fact, <span class="math inline">\({\mathcal{C}}\)</span> is exactly the closure of <span class="math inline">\((1,2)-G\)</span> shifted by a unit to reside within <span class="math inline">\([0,1].\)</span></p>
       <p>What values may <span class="math inline">\(f\)</span> take on for the points <span class="math inline">\(x\in (1,2) - G\)</span>? The choice is still not arbitrary as the values remain related. I’ll explore this question next.</p>
       <p>Given <span class="math inline">\(x\in (1,2)\)</span>, there is some <span class="math inline">\(k\)</span> with <span class="math inline">\(x\in G_k\)</span> iff the base-3 expansion of <span class="math inline">\(x\)</span> contains a 1 or if it ends with the tail <span class="math inline">\(\overline{0}\)</span>. This can be expressed as:</p>
       <p><span class="math display">\[\text{For } x\in (1,2), \quad
@@ -250,7 +251,6 @@
       <p align="right">
       <span class="math inline">\(\Box\)</span>
       </p>
-      <p>TODO add Cantor dust mention</p>
       <p>Call the function <span class="math inline">\(h\)</span> <em>tail-consistent</em> on a domain set <span class="math inline">\(A\)</span> if <span class="math inline">\({\text{tail}}(x) = {\text{tail}}(y) \;\Rightarrow\; h(x) = h(y)\)</span> for any <span class="math inline">\(x,y \in A.\)</span> There’s a bijection between the exactly self-replicating functions characterized by theorem 3 and an arbitrary choice of the following three functions:</p>
       <p><span class="math display">\[\begin{array}{ll}
       r_L : [0,1] \to {\mathbb{R}}, \\
