self_repl: finish section on esr nonplateau fns.

--- a/self_repl_fns/self_repl_fns_local.html
+++ b/self_repl_fns/self_repl_fns_local.html
@@ -258,13 +258,14 @@
       h   : (1,2) - G \to {\mathbb{R}}&amp; \text{which is tail-consistent.}
       \end{array}\]</span></p>
       <p>Any choice of these three functions results in an exactly self-replicating function. Given any exactly self-replicating function <span class="math inline">\(f\)</span> with respect to <span class="math inline">\(s,\)</span> <span class="math inline">\(t_1,\)</span> and <span class="math inline">\(t_2\)</span> given in (2), and with <span class="math inline">\(f(x) = 0\)</span> outside <span class="math inline">\([0,3]\)</span>, there exists a unique corresponding triple <span class="math inline">\(r_L,\)</span> <span class="math inline">\(r_R,\)</span> and <span class="math inline">\(h\)</span>. Theorem 3 is the key to verifying that this correspondence between such <span class="math inline">\(f\)</span> and triples <span class="math inline">\((r_L, r_R, h)\)</span> is indeed a bijection.</p>
-      <p>TODO briefly explain the image</p>
+      <p>Below is an example image depicting the function we get by choosing <span class="math inline">\(r_L(x) = \cos(2x)/2 + 1/4\)</span> and <span class="math inline">\(r_R(x) = r_L(1-x)\)</span>. The <span class="math inline">\(h\)</span> function has the constant value <span class="math inline">\(r_L(0) + r_R(0)\)</span>.</p>
       <div class="figure">
       <p class="caption">Figure 10: An exactly self-replicating function <span class="math inline">\(f\)</span> completely determined by <span class="math inline">\(r_L(x) = \cos(2x)/2 + 1/4\)</span>, <span class="math inline">\(r_R(x) = r_L(1 - x)\)</span>, and the value <span class="math inline">\(f(x) = r_L(0) + r_R(0)\)</span> for all <span class="math inline">\(x\)</span> not determined by <span class="math inline">\(r_L\)</span> and <span class="math inline">\(r_R\)</span>.</p>
       <img src="images/nonplateau.png" alt="Figure 10: An exactly self-replicating function f completely determined by r_L(x) = \cos(2x)/2 + 1/4, r_R(x) = r_L(1 - x), and the value f(x) = r_L(0) + r_R(0) for all x not determined by r_L and r_R." id="fig:nonplateau" />
       </div>
-      <p>TODO Clarify the values of <span class="math inline">\(s\)</span>, <span class="math inline">\(t_1\)</span>, and <span class="math inline">\(t_2\)</span> in that caption.</p>
+      <p>Next I’ll examine a famous function which is <em>not</em> exactly self-replicating, but which can be seen as approximately self-replicating: the normal curve.</p>
       <hr />
+      <p>TODO standardize kindle-focused output; eventually mention it from the main html page</p>
       <p>This means that <span class="math inline">\((\,f_R {\,\big|\,}3 + 0.1{\overline{*}_3}) = g\)</span>, so that <span class="math inline">\((\,f_S {\,\big|\,}\{1,3\} + 0.1{\overline{*}_3}) = g\)</span>. As above, use the map <span class="math inline">\(t_1\)</span> to conclude that <span class="math inline">\((\,f_L {\,\big|\,}0.{\big\{\!\raise1.5pt\hbox{$\genfrac{}{}{0pt}{}
       {\lower1.8pt\hbox{$\smash{\scriptstyle 0}$}}
       {\lower1pt\hbox{$\smash{\scriptstyle 2}$}}$}\!\big\}}1{\overline{*}_3}) = g\)</span>.</p>
